--- a/{{cookiecutter.project_slug}}/tox.ini
+++ b/{{cookiecutter.project_slug}}/tox.ini
@@ -14,6 +14,7 @@ deps =
     -r{toxinidir}/requirements_dev.txt
 commands =
     pip install -U pip
+    pip install .
     py.test --basetemp={envtmpdir}
 {% else %}
 commands = python setup.py test
